--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,8 +6,8 @@
         android:title="Home" />
     <item
         android:id="@+id/nav_list"
-        android:icon="@drawable/baseline_format_list_bulleted_24"
-        android:title="List" />
+        android:icon="@drawable/baseline_history_24"
+        android:title="History" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/baseline_person_24"
