--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="blue_500">#FF0000FF</color>
     <color name="gray_600">#FF808080</color>
     <color name="red">#FF3B30</color>
+    <color name="primary">#004FEE</color>
+    <color name="nav_item_color">#E6000000</color>
+    <color name="dark_gray">#888888</color>
 </resources>
